# CIT.006

./: Austria_[Linked_list]exercise.docx  CMakeLists.txt  README.md  WEEK 4 STACK for sharing.pptx  [Linked List]exercise.docx  doublecircLL.cpp  exer1.cpp  exercise1.cpp  exercise2.cpp
Austria_linkedStack/: CMakeLists.txt  main.cpp  test.cpp
Automata/: CMakeLists.txt  flash.cpp  main.cpp  mergeSort.cpp  sort.cpp
codeforce/: CMakeLists.txt  arstarsarsxzcv.cpp  c.cpp  ewan.cpp  g.cpp  g_kaloy.cpp  g_up_tim.cpp  gluglu.cpp  k_kal.cpp  loop.cpp  loop.h  main.cpp  neg_pos.cpp  newK_kal.cpp  newnewnewKKK.cpp  redundant.cpp  shenanigans.cpp  tectK.cpp  test.cpp  testing.cpp  testrrr.cpp  tttttttttttttt.cpp  upC.cpp  upacmJ.cpp  upcmA.cpp  xzcvcxv.cpp  yes.cpp
codeforce/Algolympics 2024/: B.cpp  D.cpp  F.cpp  F2.cpp  F3.cpp  K.cpp
codeforce/kal/: K_v1.cpp  alTest.cpp  alcheV2.cpp  alchemV3.cpp  comi.cpp  grafittttt.cpp  k_v2.cpp  modzero.cpp  modzero2.cpp  redundanceTwo.cpp  redundant.cpp  redundant_v3.cpp  sieve.cpp  starA.cpp  starA_v2.cpp  starA_v3.cpp  test.txt  testCase.cpp
codeforce/problemsets/: 110A.cpp  112A.cpp  118A.cpp  1A.cpp  236A.cpp  25A.cpp  263A.cpp  266A.cpp  281A.cpp  282A.cpp  339A.cpp  4A.cpp  50A.cpp  546A.cpp  59A.cpp  617A.cpp  71A.cpp  734A.cpp  791A.cpp  96A.cpp  997A.cpp
codeforce/problemsets/1804/: 18048C.cpp  18048D.cpp  1804A.cpp
codeforce/problemsets/AICG_Trial/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  test.cpp
codeforce/problemsets/R856/: 1794B.cpp  856A_1.cpp
codeforce/problemsets/R857/: 1802A.cpp  1802B.cpp
codeforce/problemsets/practice/: dugtungan.cpp  sampleast.cpp  terminal velocity.cpp
codeforce/tim/: alchemy.cpp
groupReporting/: CMakeLists.txt  avlTree.cpp  avlTree.h  code_reporting_all-in.rar  main.cpp  sample.cpp  sort.cpp  sort.h  stack.cpp  sunny.cpp  test.cpp  treeTraverse.cpp  treeTraverse.h  tutorials.cpp
groupReporting/test/: test.cpp
review/: review.sln
review.1/: review.1.sln
review.1/review.1/: review.1.cpp  review.1.vcxproj  review.1.vcxproj.filters
review.2/: review.2.sln
review.2/review.2/: review.2.cpp  review.2.vcxproj  review.2.vcxproj.filters
review.2/review.2/Debug/: review.2.exe.recipe  review.2.ilk  vc142.idb
review.2/review.2/Debug/review.2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  review.2.lastbuildstate
review/review/: review.cpp  review.vcxproj
review/review/Debug/: review.exe.recipe  review.ilk  review.obj.enc  vc142.idb
review/review/Debug/review.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  review.lastbuildstate
snake/: main.cpp  snake.cpp
stack-queue/: 2ndYears.cpp  Austria_MP1.cpp  Austria_MP2.cpp  Austria_video_link.txt  CMakeLists.txt  Canada_MP2.cpp  kervy.cpp  main.cpp  oddeven.cpp  test.cpp
week2_nodes/: CMakeLists.txt  main.cpp
week3/: Austria_exercise1version2.cpp  CMakeLists.txt
week3Queue/: Austria_BST.cpp  Austria_LinkedListImplementation.cpp  Austria_circularArrayImplementation.cpp  Austria_linearArrayImplementation.cpp  CMakeLists.txt
week3_exercise2/: Austria_exercise2version2.cpp  CMakeLists.txt
week4/: Austria_arraystack.cpp  CMakeLists.txt  main.cpp
