cmake_minimum_required(VERSION 3.24)
project(codeforce)

set(CMAKE_CXX_STANDARD 17)

add_executable(codeforce main.cpp)

add_executable(test test.cpp)
add_executable(gluglu gluglu.cpp)
add_executable(loop loop.cpp)
add_executable(neg_pos neg_pos.cpp)
add_executable(ewan ewan.cpp)
add_executable(xzcvcxv xzcvcxv.cpp)
add_executable(c c.cpp)
add_executable(upC upC.cpp)
add_executable(testrrr testrrr.cpp)
add_executable(upcmA upcmA.cpp)
add_executable(upacmJ upacmJ.cpp)
add_executable(g g.cpp)
add_executable(g_kaloy g_kaloy.cpp)
add_executable(k_kal k_kal.cpp)
add_executable(arstarsarsxzcv arstarsarsxzcv.cpp)
add_executable(tectK tectK.cpp)
add_executable(newK_kal newK_kal.cpp)
add_executable(newnewnewKKK newnewnewKKK.cpp)
add_executable(shenanigans shenanigans.cpp)
add_executable(g_up_tim g_up_tim.cpp)
add_executable(tttttttttttttt tttttttttttttt.cpp)
add_executable(redundant redundant.cpp)
add_executable(kal_alchem kal/alchem.cpp)
add_executable(kal_modzero kal/modzero.cpp)
add_executable(kal_alTest kal/alTest.cpp)
add_executable(kal_modzero2 kal/modzero2.cpp)
add_executable(kal_grafittttt kal/grafittttt.cpp)
add_executable(kal_redundant kal/redundant.cpp)
add_executable(kal_redundanceTwo kal/redundanceTwo.cpp)
add_executable(kal_K_v1 kal/K_v1.cpp)
add_executable(kal_comi kal/comi.cpp)
add_executable(kal_k_v2 kal/k_v2.cpp)
add_executable(kal_testCase kal/testCase.cpp)
add_executable(kal_alcheV2 kal/alcheV2.cpp)
add_executable(kal_k_v3 kal/k_v3.cpp)
add_executable(kal_redundant_v3 kal/redundant_v3.cpp)