cmake_minimum_required(VERSION 3.24)
project(codeforce)

set(CMAKE_CXX_STANDARD 17)
add_executable(problemsets_practice_dugtungan problemsets/practice/dugtungan.cpp)
add_executable(problemsets_997A problemsets/997A.cpp)
add_executable(problemsets_110A problemsets/110A.cpp)
add_executable(problemsets_734A problemsets/734A.cpp)
add_executable(problemsets_AICG_Trial_A problemsets/AICG_Trial/A.cpp)
add_executable(problemsets_AICG_Trial_B problemsets/AICG_Trial/B.cpp)
add_executable(problemsets_AICG_Trial_C problemsets/AICG_Trial/C.cpp)
add_executable(problemsets_AICG_Trial_D problemsets/AICG_Trial/D.cpp)
add_executable(problemsets_AICG_Trial_E problemsets/AICG_Trial/E.cpp)
add_executable(problemsets_AICG_Trial_F problemsets/AICG_Trial/F.cpp)
add_executable(problemsets_AICG_Trial_test problemsets/AICG_Trial/test.cpp)