cmake_minimum_required(VERSION 3.24)
project(codeforce)

set(CMAKE_CXX_STANDARD 17)
add_executable(Algolympics 2024_D Algolympics 2024/D.cpp)
add_executable(Algolympics 2024_B Algolympics 2024/B.cpp)
add_executable(Algolympics 2024_F Algolympics 2024/F.cpp)
add_executable(Algolympics 2024_F2 Algolympics 2024/F2.cpp "Algolympics 2024/F2.cpp")
add_executable(Algolympics 2024_K Algolympics 2024/K.cpp)
add_executable(Algolympics 2024_F3 Algolympics 2024/F3.cpp "Algolympics 2024/F3.cpp" "Algolympics 2024/F3.cpp")